feat(export): add export `variables.less`

--- a/panel/index.html
+++ b/panel/index.html
@@ -18,7 +18,7 @@
           <button type="button">Save bootstrap.css</button>
         </li>
         <li>
-          <button type="button">Save variables.less</button>
+          <button type="button" ng-click="vm.saveVariables()">Save variables.less</button>
         </li>
       </ul>
     </div>
