--- a/panel/index.html
+++ b/panel/index.html
@@ -15,7 +15,7 @@
           <span>{{vm.status}}</span>
         </li>
         <li>
-          <button type="button">Save bootstrap.css</button>
+          <button type="button" ng-click="vm.saveCss()">Save bootstrap.css</button>
         </li>
         <li>
           <button type="button" ng-click="vm.saveVariables()">Save variables.less</button>
