feat(status): add status bar

--- a/panel/index.html
+++ b/panel/index.html
@@ -14,7 +14,6 @@
         <ul class="action-list">
           <li>
             <button ng-click="vm.update()">Update CSS</button>
-            <span>{{vm.status}}</span>
           </li>
           <li>
             <button ng-click="vm.saveCss()">Save bootstrap.css</button>
@@ -24,6 +23,7 @@
           </li>
         </ul>
       </div>
+      <div class="sidebar-section-header">Status: {{vm.status}}</div>
     </div>
 
     <div class="content-area">
