--- a/panel/index.html
+++ b/panel/index.html
@@ -9,6 +9,7 @@
 
   <body ng-controller="MainCtrl as vm" ng-cloak>
     <div class="left-sidebar">
+      <!-- Action List -->
       <div class="sidebar-section-header">Actions</div>
       <div class="sidebar-section-body">
         <ul class="action-list">
@@ -23,12 +24,21 @@
           </li>
         </ul>
       </div>
+
+      <!-- Status -->
       <div class="sidebar-section-header">Status: {{vm.status}}</div>
+
+      <!-- Anchors -->
+      <div class="sidebar-section-body anchor-section">
+        <ul class="anchor-list">
+          <li ng-repeat="tab in ::vm.tabs" ng-click="vm.jumpToSection(tab.title)">{{::tab.title}}</li>
+        </ul>
+      </div>
     </div>
 
     <div class="content-area">
       <div ng-repeat="tab in vm.tabs">
-        <h4>{{tab.title}}</h4>
+        <h4 id="{{tab.title}}">{{tab.title}}</h4>
         <table>
           <tbody>
             <tr ng-repeat="var in tab.vars">
