--- a/panel/index.html
+++ b/panel/index.html
@@ -35,8 +35,10 @@
     </div>
 
     <div class="content-area">
+      <a id="top-anchor"></a>
       <div ng-repeat="tab in vm.tabs">
-        <h4 id="{{tab.title}}">{{tab.title}}</h4>
+        <a id="{{tab.title}}"></a>
+        <h4>{{tab.title}} <a class="top-anchor-link" ng-click="vm.jumpToSection('top-anchor')">&uarr;</a></h4>
         <table>
           <tbody>
             <tr ng-repeat="var in tab.vars">
